--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
 <head>
-<stylesheet
-</head>
-<body>
 
+<body>
+<section className="main">
+<div class="MainContent">
+    
+</div>
+
+</section>
 </body>
 
 
